--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </a>
           <ul class="header-list list">
             <li class="header-item">
-              <a href="./index.html" class="header-link">Студія</a>
+              <a href="./index.html" class="header-link current-link">Студія</a>
             </li>
             <li class="header-item">
               <a href="./portfolio.html" class="header-link">Портфоліо</a>
@@ -139,26 +139,29 @@
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
           <ul class="work-list list">
-            <li>
+            <li class="work-item">
               <img
                 src="./images/box1.jpg"
                 alt="Дизайнер працює за ноутбуком"
                 width="370"
               />
+              <p class="work-top-text">Десктопні додатки</p>
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./images/box2.jpg"
                 alt="Дизайнер створює дизайн мобільного додатку"
                 width="370"
               />
+              <p class="work-top-text">Мобільні додатки</p>
             </li>
-            <li>
+            <li class="work-item">
               <img
                 src="./images/box3.jpg"
                 alt="Гамма кольорів на планшеті"
                 width="370"
               />
+              <p class="work-top-text">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
