--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,9 @@
               <a href="./index.html" class="header-link">Студія</a>
             </li>
             <li class="header-item">
-              <a href="./portfolio.html" class="header-link">Портфоліо</a>
+              <a href="./portfolio.html" class="header-link current-link"
+                >Портфоліо</a
+              >
             </li>
             <li class="header-item">
               <a href="" class="header-link">Контакти</a>
